--- a/style/style.css
+++ b/style/style.css
@@ -782,7 +782,7 @@ button:focus {
     margin-bottom: 15px;
 }
 
-.tools_expert .skill_main .skill_item .progress {
+.progress {
     height: 20px;
     border-radius: 10px;
     background: transparent;
@@ -792,7 +792,7 @@ button:focus {
     box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.2);
 }
 
-.tools_expert .skill_main .skill_item .progress .progress-bar {
+.progress .progress-bar {
     width: 0%;
     transition: width .6s ease;
     height: 10px;
